BUG:311241

Patch by Sahil
CCMAIl:nagpal.sahil01@gmail.com

Fixes using the mousewheel in the superslider